src/widgets/splitter/snapshots/tvision_rs__widgets__splitter__divider_tests__divider_active.snap
---
source: src/widgets/splitter/mod.rs
expression: snap
---
size: 30x5
cursor: hidden
text:
|AAAAAAAAAA│BBBBBBBBB│CCCCCCCCC|
|AAAAAAAAAA│BBBBBBBBB│CCCCCCCCC|
|AAAAAAAAAA│BBBBBBBBB│CCCCCCCCC|
|AAAAAAAAAA│BBBBBBBBB│CCCCCCCCC|
|AAAAAAAAAA│BBBBBBBBB│CCCCCCCCC|
attr:
|aaaaaaaaaabaaaaaaaaabaaaaaaaaa|
|aaaaaaaaaabaaaaaaaaabaaaaaaaaa|
|aaaaaaaaaabaaaaaaaaabaaaaaaaaa|
|aaaaaaaaaabaaaaaaaaabaaaaaaaaa|
|aaaaaaaaaabaaaaaaaaabaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
  b fg=RGB(255,255,255) bg=RGB(0,0,170)
